Fix overflow for backpack

--- a/client/src/Pages/Backpack/Backpack.css
+++ b/client/src/Pages/Backpack/Backpack.css
@@ -10,6 +10,7 @@
   color: #F6F741;
   padding: 30px;
   overflow-x: auto;
+  box-sizing: border-box;
 }
 
 /* Backpack Title */
